--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 body {
-    background-image: url("images/CloudHoriz.png");
-    background-color: #ffff;
+    background-color: #c5d6d1;
     height: 100%;
     background-repeat: repeat;
     background-size: cover;
     margin: 0%;
 }
+
+body#index {
+    background-image: url("images/CloudHoriz.png");
+}
+/*nav styles */
 
 nav {
     background-color: whitesmoke;
@@ -33,22 +37,108 @@ nav li > a:hover {
     color: red;
   }
 
-nav > li > a.active {
-    color: green;
+.nav-link-wrapper {
+    border-bottom: 1px transparent;
+    transition: border-bottom 0.5s;
+}
+
+.nav-link-wrapper a {
+    color: #4b4c52;
+    text-decoration: none;
+    transition: color 0.5s;
+}
+
+.active-nav-link {
+    border-bottom: 1px solid black;
+}
+
+.active-nav-link a {
+    color: red important;
 }
 
 section#about {
     display: grid;
-    margin-top: 5em;
-    grid-template-columns: 50% 50%;
+    margin-top: 2em;
+    grid-template-columns: 1% 98% 1%;
 }
 section#about > .text {
     grid-column: 2/2;
-    background-color: rgb(247,220,208, .5);
+    background-color: rgba(255, 251, 249, 0.95);
     margin: 5%;
 }
 
 div.text {
     padding: 3%;
     font-family: sans-serif;
+}
+
+section#dataviz {
+    display: grid;
+    margin-top: 2em;
+    grid-template-columns: 1% 98% 1%;
+}
+section#dataviz > .text {
+    grid-column: 2/3;
+    background-color: rgba(255, 251, 249, 0.95);
+    margin: 5%;
+}
+
+section#artprojs {
+    display: grid;
+    margin-top: 2em;
+    grid-template-columns: 1% 98% 1%;
+}
+section#artprojs > .text {
+    grid-column: 2/3;
+    background-color: rgba(255, 251, 249, 0.95);
+    margin: 5%;
+}
+
+/* Portfolio styles */
+
+.portfolio-items-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.portfolio-item-wrapper {
+    position: relative;
+}
+
+.portfolio-img-background {
+    height: 350px;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.img-text-wrapper {
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+}   
+
+.img-text-wrapper .subtitle {
+    transition: 1s;
+    font-weight: 600;
+    color: transparent;
+}
+
+.img-text-wrapper:hover .subtitle {
+    font-weight: 600;
+    color: white;
+    background-color: black;
+}
+
+.img-darken {
+    transition: 1s; 
+    filter: brightness(20%);
 }
