--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ div.text {
 
 section#dataviz {
     display: grid;
-    margin-top: 2em;
+    margin-top: 3em;
     grid-template-columns: 1% 98% 1%;
 }
 section#dataviz > .text {
@@ -83,9 +83,14 @@ section#dataviz > .text {
     margin: 5%;
 }
 
+section#dataviz .text a{
+   text-decoration: none;
+   color: purple;
+}
+
 section#artprojs {
     display: grid;
-    margin-top: 2em;
+    margin-top: 3em;
     grid-template-columns: 1% 98% 1%;
 }
 section#artprojs > .text {
